Fix various issues

--- a/output/pages/about.html
+++ b/output/pages/about.html
@@ -13,11 +13,11 @@
 
 <meta property="og:title" content="About "/>
 <meta property="og:url" content="/pages/about.html" />
-<meta property="og:description" content="My name is Chris Rinaldi and I am a data scientist who loves building data-driven products. This blog serves as a dumping ground for a range of topics that interest me, including data science, programming, and anything else that happens to catch my fancy. Also, I am a proud cat ..." />
+<meta property="og:description" content="My name is Chris Rinaldi and I am a data scientist who loves building data-driven products. This blog serves as a dumping ground for a range of topics that interest me, including data science, programming, and anything else that happens to catch my fancy. Also, I am a proud cat …" />
 <meta property="og:site_name" content="Chris Rinaldi" />
 <meta property="og:article:author" content="Chris Rinaldi" />
 <meta name="twitter:title" content="About ">
-<meta name="twitter:description" content="My name is Chris Rinaldi and I am a data scientist who loves building data-driven products. This blog serves as a dumping ground for a range of topics that interest me, including data science, programming, and anything else that happens to catch my fancy. Also, I am a proud cat ...">
+<meta name="twitter:description" content="My name is Chris Rinaldi and I am a data scientist who loves building data-driven products. This blog serves as a dumping ground for a range of topics that interest me, including data science, programming, and anything else that happens to catch my fancy. Also, I am a proud cat …">
 
         <title>About  · Chris Rinaldi
 </title>
@@ -30,7 +30,6 @@
         <link rel="stylesheet" type="text/css" href="/theme/css/elegant.css" media="screen">
         <link rel="stylesheet" type="text/css" href="/theme/css/ipynb.css" media="screen">
         <link rel="stylesheet" type="text/css" href="/theme/css/custom.css" media="screen">
-        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Chris Rinaldi - Full Atom Feed" />
     </head>
     <body>
         <div id="content-sans-footer">
@@ -45,10 +44,9 @@
                     <a class="brand" href="/"><span class=site-name>Chris Rinaldi</span></a>
                     <div class="nav-collapse collapse">
                         <ul id="top-menu" class="nav pull-right">
-                            <li  class="active"><a href="/pages/about.html">About</a></li>
                             <li ><a href="/categories.html">Categories</a></li>
-                            <li ><a href="/tags.html">Tags</a></li>
                             <li ><a href="/archives.html">Archives</a></li>
+                            <li  class="active"><a href="/pages/about.html">About</a></li>
                         </ul>
                     </div>
                 </div>
@@ -68,7 +66,7 @@
 <div class="row-fluid">
         <div class="span9 offset1 article-content">
 
-            <p><img alt="Picture of me" src="/images/me.jpg" /></p>
+            <p><img alt="Picture of me" src="/images/me.jpg"></p>
 <p>My name is <strong>Chris Rinaldi</strong> and I am a data scientist who loves building data-driven products. This blog serves as a dumping ground for a range of topics that interest me, including data science, programming, and anything else that happens to catch my fancy.</p>
 <p>Also, I am a proud cat dad!</p>
         </div>
