--- a/output/authors.html
+++ b/output/authors.html
@@ -43,14 +43,12 @@
         </div>
         <div class="container-fluid">
             <div class="row-fluid">
-                <div class="span1"></div>
-                <div class="span10">
+                <div class="offset2 span8">
     <h1>Authors on Chris Rinaldi</h1>
 
     <ul>        <li><a href="/author/chris-rinaldi.html">Chris Rinaldi</a> (3)</li>
     </ul>
                 </div>
-                <div class="span1"></div>
             </div>
         </div>
         <div id="push"></div>
