--- a/output/archives.html
+++ b/output/archives.html
@@ -52,17 +52,16 @@
         </div>
         <div class="container-fluid">
             <div class="row-fluid">
-                <div class="span1"></div>
-                <div class="span10">
+                <div class="offset2 span8">
 
 
 <div class="row-fluid">
-    <header class="page-header span10 offset2">
+    <header class="page-header span8 offset2">
     <h1><a href="/archives.html">All Posts</a></h1>
     </header>
 </div>
 <div class="row-fluid">
-    <div class="span10 offset2">
+    <div class="span8 offset2">
         <div class="blog-archives">
                     <h2 id="2017"><a href="#2017">2017</a></h2>
                     <article>
@@ -82,7 +81,6 @@
 </div>
 
                 </div>
-                <div class="span1"></div>
             </div>
         </div>
         <div id="push"></div>
