--- a/output/basic-eda-seaborn.html
+++ b/output/basic-eda-seaborn.html
@@ -56,8 +56,7 @@
         </div>
         <div class="container-fluid">
             <div class="row-fluid">
-                <div class="span1"></div>
-                <div class="span10">
+                <div class="offset2 span8">
 <article>
 <div class="row-fluid">
     <header class="page-header span12">
@@ -1714,7 +1713,6 @@ h6:hover .anchor-link {
 </div>
 </article>
                 </div>
-                <div class="span1"></div>
             </div>
         </div>
         <div id="push"></div>
