--- a/output/pages/about.html
+++ b/output/pages/about.html
@@ -54,8 +54,7 @@
         </div>
         <div class="container-fluid">
             <div class="row-fluid">
-                <div class="span1"></div>
-                <div class="span10">
+                <div class="offset2 span8">
 <article>
 <div class="row-fluid">
     <header class="page-header span12">
@@ -73,7 +72,6 @@
     </div>
     </article>
                 </div>
-                <div class="span1"></div>
             </div>
         </div>
         <div id="push"></div>
