--- a/output/tags.html
+++ b/output/tags.html
@@ -53,8 +53,7 @@
         </div>
         <div class="container-fluid">
             <div class="row-fluid">
-                <div class="span1"></div>
-                <div class="span10">
+                <div class="offset2 span8">
 
 <div class="row-fluid">
     <header class="page-header span10 offset2">
@@ -111,7 +110,6 @@
 </div>
 
                 </div>
-                <div class="span1"></div>
             </div>
         </div>
         <div id="push"></div>
